--- a/index.html
+++ b/index.html
@@ -1,76 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
+<html >
+<head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
+	<link rel= "stylesheet" href="css.css" type="text/css">
+</head>
 
-    <title>Starter Template for Bootstrap</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="bootstrap-3.3.6-dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="starter-template.css" rel="stylesheet">
-
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-
-  <body>
-
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Project name</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
-
-    <div class="container">
-
-      <div class="starter-template">
-        <h1>Bootstrap starter template</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
-      </div>
-
-    </div><!-- /.container -->
-
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
-  </body>
+<body>
+   <nav> 
+  <p><h2> Оцінка компанії</h2><p/>
+   <p><i>по результатам голосування<i><p/>
+   <p><h6>Процесійне зростання           91%</h6></p>
+   <p><h6>Комфортні умови праці          91%</h6></p>
+   <p><h6>Грамотний проектний менеджмент 90%</h6></p>
+   <p><h6>Хороший компенсаційний проект  87%</h6></p>
+   <p><h6>Визнання результатів праці     88%</h6></p>
+   <p><h6>Відносини з колегами           94%</h6></p>
+      <ul>
+	  	<li><a href="facebook.com">Facebook</a></li>
+		<li><a href="ok.ru">Однокласники</a></li>
+	   </ul>
+   </nav>
+   <header>
+	    <table cellspacing="0" class="menu">
+	    <tr>
+         <td><a href="about.html">Про нас</a></td>
+         <td><a href="pogoda.html">Про погоду ... <i>здається дощик починається</i></a></td>
+         <td><a href="#about">Про сумне...<b>курс валют</b></a></td>
+         <td><a href="#contact">Із досвіду роботи</a></td>
+		 </tr>
+	    </table> 
+		
+	    <p><img src="s.jpg" width="400" class="fig"/>	
+		SoftServe - найбільша глобальна IT-компанія з українським корінням, яка спеціалізується у сфері 
+		розробки програмного забезпечення та надання косультаційних послуг. З 19993 року SoftServe співпрацює з 
+		організаціями від розміру стартапів до великих компаній, допомагаючи їм у їхньому розвитку та інноваційності. 
+		<p>SoftServe визнана кращим роботодавцем України 2010-2015 років та здобула визнання понад 350 компаній всього 
+		світу, серед яких відомі бренди США, Канади та Західної Європи.</p>
+		<p>SoftServe - компанія, у якій працює понад 4000 професіоналів у різних сферах ІТ. Розробницькі ценри розташовані
+		у Львові, Дніпропетровську, Рівному, Івано-Франківську, Чернівцях, Києві, Харкові, Софії(Болгарія),
+		Вроцлаві(Польща).</p></p>
+    </header>
+	<footer>
+	   Приєнуйся до команди професіоналів
+	</footer>
+</body>
 </html>
