--- a/lesson_java/index.html
+++ b/lesson_java/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
+<meta charset="utf-8"/>
+<link rel="stylesheet" href="css.css" type="text/css"/>
 </head>
 <body>
 <h3>Таблиця Піфагора</h3>
-<table>
+<div id="main">
+</div>
 <script type="text/javascript" src="pifagor.js"></script>
-</table>
 </body>
 </html>
